test/interaction/Issue2728-3.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Type-checking*" "Checking Issue2728-3 (Issue2728-3.agda). " t)
(agda2-status-action "Checked")
(agda2-info-action "*All Done*" "" nil)
((last . 1) . (agda2-goals-action '()))
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Type-checking*" "Checking Issue2728-3 (Issue2728-3.agda). " t)
(agda2-status-action "")
(agda2-info-action "*All Errors*" "Issue2728-3.agda:4.11-18: error: [SafeFlagPostulate] Cannot postulate B with safe flag when scope checking the declaration B : Set" nil)
((last . 1) . (agda2-goals-action '()))
