test/interaction/Issue2728-3.agda
{-# OPTIONS --safe #-}
module Issue2728-3 where
foo = Set -- something to cache
postulate B : Set
